Dockerized backend (TODO: fix connecting to Mongo Cloud)